--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Your code here -->
 
-<img src="../images/my_company_logo.png">
+<img src="https://i.imgur.com/H1qsYEl.png">
 
 
 </body>
