--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 
 <img src="https://i.imgur.com/H1qsYEl.png">
 <img src="https://i.imgur.com/H1qsYEl.png" alt="comedic crow gets wholesome support">
-<img src="../images/my_company_logo.png" alt="my company name" title="We're here to help you!">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="cat" title="Cat">
 </body>
 </html>
